Amend email template

--- a/templates/hsbc_template.html
+++ b/templates/hsbc_template.html
@@ -231,11 +231,13 @@ table.body--mso{width:768px}
                         <td class="marketing-email-header__content-wrapper" style="border-collapse: collapse; mso-line-height-rule: exactly; padding: 0 45px; vertical-align: middle; box-sizing: border-box; width: 100%;" width="100%" valign="middle">
                             <table class="table-el-wrapper" dir="ltr" style="border-collapse: collapse; border: 0; mso-table-lspace: 0; mso-table-rspace: 0; border-spacing: 0; margin: 0; max-width: 768px; width: 100%; padding: 0;" width="100%">
                                 <tbody><tr>
-                                    <th class="marketing-email-header__description" style="font-size: 16px; line-height: 1.5; font-weight: 400; width: 100%; padding: 16px 0 32px;display: flex;flex-direction: column;" align="right">
-                                        
-                                            <span>SPP Code: {{spp_code}}</span><span style="font-size: 14px;">Paste this in your HSBC mobile app to check it</span>
-                                        
-                                    </th><td class="hidden-preheader" style="border-collapse: collapse; mso-line-height-rule: exactly; vertical-align: top; padding: 0; opacity: 0; visibility: hidden; mso-hide: all; overflow: hidden; color: #fff; line-height: 1px; max-height: 0; max-width: 0; font-size: 1px; display: none;" valign="top">
+                                    <th class="marketing-email-header__description" style="font-size: 16px; line-height: 1.5; font-weight: 400; width: 100%;display: flex;" align="right">
+                                            <span>SPP Code: {{spp_code}}</span>
+                                    </th>
+                                    <th class="marketing-email-header__description" style="font-size: 16px; line-height: 1.5; font-weight: 400; width: 100%;padding: 16px 0 32px;display: flex;" align="right">
+                                        <span style="font-size: 14px;">Paste this in your HSBC mobile app to check it</span>
+                                    </th>
+                                    <td class="hidden-preheader" style="border-collapse: collapse; mso-line-height-rule: exactly; vertical-align: top; padding: 0; opacity: 0; visibility: hidden; mso-hide: all; overflow: hidden; color: #fff; line-height: 1px; max-height: 0; max-width: 0; font-size: 1px; display: none;" valign="top">
                                         Find out how you can keep your accounts safe
                                     </td>
                                 </tr>
